# swagger.yaml
@@ -159,18 +159,12 @@ paths:
             type: object
             required:
               - username
-              - sessionId
             properties:
               username:
                 type: string
                 description: users username
                 enum:
                   - seva
-              sessionId:
-                type: string
-                description: users sessionId
-                enum:
-                  - 5B8C28E08E483E25B2816EF22CBAC3CE
         '401':
           description: not authorized
           schema:
@@ -206,7 +200,7 @@ paths:
 
   /api/user/rename:
     post:
-      summary: Update user info
+      summary: Update user
       consumes: []
       produces:
         - application/json
@@ -277,7 +271,7 @@ paths:
 
   /api/user/rating:
     post:
-      summary: Signup New User
+      summary: get best players
       consumes: []
       produces:
         - application/json
